group controllers on devices page

--- a/src/atlantis/templates/devices.html
+++ b/src/atlantis/templates/devices.html
@@ -10,9 +10,11 @@
 					{% for sensor in device.sensors %}
 						<div>{{sensor.name}}: {{sensor.value}}</div>
 					{% endfor %}
-					{% for controller in device.controllers %}
+					{% for group in device.controllers|groupby('group') %}
 						<div style="margin-top: 5px">
-							<a href="/devices/controller?device=%22{{device.name}}%22&controller=%22{{controller.name}}%22" class="btn link-action" style="width: 50px">{{controller.name}}</a>
+							{% for controller in group.list %}
+								<a href="/devices/action?device=%22{{device.name}}%22&controller=%22{{controller.name}}%22" class="btn link-action" style="width: 50px">{{controller.name}}</a>
+							{% endfor %}
 						</div>
 					{% endfor %}
 				</td>
