--- a/src/atlantis/templates/frame.html
+++ b/src/atlantis/templates/frame.html
@@ -16,7 +16,8 @@ require(['bootstrap']); // for bootstrap top menu
 	<div class="navbar-inner">
 		<span class="brand" style="margin-left: 5px; margin-right: 5px">Atlantis</span>
 		<ul class="nav">
-			<li><a href="/devices/home">Devices</a></li>
+			<li><a href="/devices">Devices</a></li>
+			<li><a href="/rules">Rules</a></li>
 		</ul>
 	</div>
 </div>
