--- a/src/atlantis/templates/device.html
+++ b/src/atlantis/templates/device.html
@@ -9,10 +9,7 @@
 			{% for sensor in device.sensors %}
 				<tr>
 					<td class="span1">{{sensor.name}}</td>
-					<td class="span4">
-						{{sensor.value}}
-						({{sensor.time}})
-					</td>
+					<td class="span4">{{sensor.value}} ({{sensor.time}})</td>
 					<td class="span1" style="text-align: right">
 						{% if sensor.interval is not None %}
 							<i class="icon-refresh" style="cursor: pointer" data-url="/sensors/update?name=%22{{sensor.full_name}}%22"></i>
