--- a/src/atlantis/templates/device.html
+++ b/src/atlantis/templates/device.html
@@ -3,14 +3,14 @@
 {% block body %}
 <h2>{{device.name|title}}</h2>
 <div class="row">
-	<div class="span6">
+	<div class="col-lg-6">
 		<h4>Sensors</h4>
-		<table class="span6">
+		<table class="table">
 			{% for sensor in device.sensors %}
 				<tr>
-					<td class="span1">{{sensor.name}}</td>
-					<td class="span4">{{sensor.value}} ({{sensor.time}})</td>
-					<td class="span1" style="text-align: right; padding-right: 60px">
+					<td class="col-lg-1">{{sensor.name}}</td>
+					<td class="col-lg-4">{{sensor.value}} ({{sensor.time}})</td>
+					<td class="col-lg-1" style="text-align: right; padding-right: 60px">
 						{% if sensor.interval != None %}
 							<i class="icon-refresh" style="cursor: pointer" data-url="sensors/update?name=%22{{sensor.full_name}}%22"></i>
 						{% endif %}
@@ -20,12 +20,12 @@
 			{% endfor %}
 		</table>
 	</div>
-	<div class="span6">
+	<div class="col-lg-6">
 		<h4>Controllers</h4>
 		{% for group in device.controllers|groupby('group') %}
 			<div style="margin-top: 5px">
 				{% for controller in group.list|sort(attribute='order') %}
-					<a href="controllers/trigger?name=%22{{controller.full_name}}%22" class="btn link-trigger" style="width: 50px">{{controller.name}}</a>
+					<a href="controllers/trigger?name=%22{{controller.full_name}}%22" class="btn btn-primary link-trigger" style="width: 70px">{{controller.name}}</a>
 				{% endfor %}
 			</div>
 		{% endfor %}
