--- a/src/atlantis/templates/frame.html
+++ b/src/atlantis/templates/frame.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Atlantis</title>
-<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/css/bootstrap.min.css" rel="stylesheet" />
+<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
 {% block css %}
 {% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
@@ -13,13 +13,13 @@ require(['bootstrap']); // for bootstrap top menu
 </head>
 <body>
 <div class="navbar navbar-inverse">
-	<div class="navbar-inner">
-		<span class="brand" style="margin-left: 5px; margin-right: 5px">Atlantis</span>
-		<ul class="nav">
-			<li><a href="/devices">Devices</a></li>
-			<li><a href="/rules">Rules</a></li>
-		</ul>
+	<div class="navbar-header">
+		<span class="navbar-brand" style="margin-left: 5px; margin-right: 5px">Atlantis</span>
 	</div>
+	<ul class="nav navbar-nav">
+		<li><a href="/devices">Devices</a></li>
+		<li><a href="/rules">Rules</a></li>
+	</ul>
 </div>
 <div class="container">
 {% block body %}{% endblock %}
