--- a/src/atlantis/templates/rules.html
+++ b/src/atlantis/templates/rules.html
@@ -16,23 +16,23 @@
 
 {% block body %}
 {% for item in items %}
-	<div class="span12" style="margin-bottom: 30px">
+	<div class="col-lg-12" style="margin-bottom: 30px">
 		{% if item.problem.exists() %}
-			<div class="span12 problem" style="color: red">
+			<div class="col-lg-12 problem" style="color: red">
 				{{item.problem.name}}: {{item.problem.description}}
 			</div>
 		{% else %}
-			<div class="span12 problem">
+			<div class="col-lg-12 problem">
 				{{item.problem.name}}: {{item.problem.description}}
 			</div>
 		{% endif %}
 		{% for solution in item.solutions %}
 			{% if solution.applied() %}
-				<div class="span12 solution" style="color: #006600; font-weight: bold">
+				<div class="col-lg-12 solution" style="color: #006600; font-weight: bold">
 					{{solution.name}}: {{solution.description}}
 				</div>
 			{% else %}
-				<div class="span12 solution" style="color: gray">
+				<div class="col-lg-12 solution" style="color: gray">
 					{{solution.name}}: {{solution.description}}
 				</div>
 			{% endif %}
