--- a/src/atlantis/templates/device.html
+++ b/src/atlantis/templates/device.html
@@ -12,9 +12,9 @@
 					<td class="col-lg-4">{{sensor.value}} ({{sensor.time}})</td>
 					<td class="col-lg-1" style="text-align: right; padding-right: 60px">
 						{% if sensor.interval != None %}
-							<i class="icon-refresh" style="cursor: pointer" data-url="sensors/update?name=%22{{sensor.full_name}}%22"></i>
+							<span class="glyphicon glyphicon-refresh" style="cursor: pointer" data-url="sensors/update?name=%22{{sensor.full_name}}%22"></span>
 						{% endif %}
-						<i class="icon-edit" style="cursor: pointer" data-url="sensors/set?name=%22{{sensor.full_name}}%22"></i>
+						<span class="glyphicon glyphicon-edit" style="cursor: pointer" data-url="sensors/set?name=%22{{sensor.full_name}}%22"></span>
 					</td>
 				</tr>
 			{% endfor %}
