--- a/src/atlantis/templates/rules.html
+++ b/src/atlantis/templates/rules.html
@@ -2,6 +2,10 @@
 
 {% block css %}
 <style>
+.link-api {
+	margin-left: 5px;
+}
+
 .problem {
 	font-size: 14pt;
 	font-weight: bold;
@@ -23,12 +27,22 @@
 	<div class="col-lg-12" style="margin-bottom: 30px">
 		<div class="col-lg-12 problem {{item.problem.enabled()|test('', 'item-disabled')}}" style="{{item.problem.exists()|test('color: red')}}">
 			{{item.problem.name}}: {{item.problem.description}}
+			<a class="link-api glyphicon glyphicon-sound-dolby" href="problems/enable?name=%22{{item.problem.name}}%22&enabled={{item.problem.enabled()|test('false', 'true')}}"></a>
 		</div>
 		{% for solution in item.solutions %}
 			<div class="col-lg-12 solution {{solution.enabled(item.problem)|test('', 'item-disabled')}}" style="{{solution.applied()|test('color: #006600; font-weight: bold', 'color: gray')}}">
 				{{solution.name}}: {{solution.description}}
+				<a class="link-api glyphicon glyphicon-sound-dolby" href="solutions/enable?name=%22{{solution.name}}%22&problem=%22{{item.problem.name}}%22&enabled={{solution.enabled(item.problem)|test('false', 'true')}}"></a>
 			</div>
 		{% endfor %}
 	</div>
 {% endfor %}
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+require(['jquery', 'common/bootstrap-ext'], function($) {
+	$('.link-api').apiLink();
+});
+</script>
 {% endblock %}
