--- a/src/atlantis/templates/devices.html
+++ b/src/atlantis/templates/devices.html
@@ -25,13 +25,13 @@ a:hover {
 					<a href="device?name={{device.name}}" class="link-device">
 						{{device.name|capitalize}}
 					</a>
-					{% for sensor in device.sensors %}
-						<div>{{sensor.name}}: {{sensor.value}}</div>
+					{% for sensor in device.sensors() %}
+						<div>{{sensor.name()}}: {{sensor.value()}}</div>
 					{% endfor %}
-					{% for group in device.controllers|groupby('group') %}
+					{% for group in device.controllers()|groupby('group') %}
 						<div style="margin-top: 5px">
 							{% for controller in group.list|sort(attribute='order') %}
-								<a href="controllers/trigger?name=%22{{controller.full_name}}%22" class="btn btn-primary link-trigger" style="width: 70px">{{controller.name}}</a>
+								<a href="controllers/trigger?name=%22{{controller.full_name()}}%22" class="btn btn-primary link-trigger" style="width: 70px">{{controller.name()}}</a>
 							{% endfor %}
 						</div>
 					{% endfor %}
