--- a/src/atlantis/templates/device.html
+++ b/src/atlantis/templates/device.html
@@ -6,10 +6,10 @@
 	<div class="col-lg-6">
 		<h4>Sensors</h4>
 		<table class="table">
-			{% for sensor in device.sensors %}
+			{% for sensor in device.sensors() %}
 				<tr>
-					<td class="col-lg-1">{{sensor.name}}</td>
-					<td class="col-lg-4">{{sensor.value}} ({{sensor.time}})</td>
+					<td class="col-lg-1">{{sensor.name()}}</td>
+					<td class="col-lg-4">{{sensor.value()}} ({{sensor.time()}})</td>
 					<td class="col-lg-1" style="text-align: right; padding-right: 60px">
 						{% if sensor.interval != None %}
 							<span class="glyphicon glyphicon-refresh" style="cursor: pointer" data-url="sensors/update?name=%22{{sensor.full_name}}%22"></span>
@@ -22,10 +22,10 @@
 	</div>
 	<div class="col-lg-6">
 		<h4>Controllers</h4>
-		{% for group in device.controllers|groupby('group') %}
+		{% for group in device.controllers()|groupby('group') %}
 			<div style="margin-top: 5px">
 				{% for controller in group.list|sort(attribute='order') %}
-					<a href="controllers/trigger?name=%22{{controller.full_name}}%22" class="btn btn-primary link-trigger" style="width: 70px">{{controller.name}}</a>
+					<a href="controllers/trigger?name=%22{{controller.full_name()}}%22" class="btn btn-primary link-trigger" style="width: 70px">{{controller.name()}}</a>
 				{% endfor %}
 			</div>
 		{% endfor %}
