--- a/src/atlantis/templates/devices.html
+++ b/src/atlantis/templates/devices.html
@@ -2,6 +2,20 @@
 
 {% block css %}
 <style>
+.card {
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 10px;
+	border-color: #c3c3c3;
+	padding: 20px;
+}
+
+.splitter {
+	border-left-style: solid;
+	border-left-width: 1px;
+	border-left-color: #d2d2d2;
+}
+
 .link-device {
 	font-size: 16pt;
 	font-weight: bold;
@@ -17,11 +31,11 @@ a:hover {
 {% endblock %}
 
 {% block body %}
-<table class="table">
-	{% for row in devices|batch(3) %}
-		<tr>
-			{% for device in row %}
-				<td class="col-lg-4" style="padding-bottom: 20px;">
+{% for row in devices|batch(3) %}
+	<div class="row">
+		{% for device in row %}
+			<div class="col-lg-4" style="padding: 10px">
+				<div class="card">
 					<a href="device?name={{device.name}}" class="link-device">
 						{{device.name|capitalize}}
 					</a>
@@ -35,11 +49,37 @@ a:hover {
 							{% endfor %}
 						</div>
 					{% endfor %}
-				</td>
-			{% endfor %}
-		</tr>
-	{% endfor %}
-</table>
+					<table class="table" style="margin: 0">
+						<thead>
+							<th>Problems</th>
+							<th class="splitter">Solutions</th>
+						</thead>
+						<tr>
+							<td>
+								{% for problem in device.problems() %}
+									{% if problem.exists() %}
+										<div style="color: red">{{problem.name()}}</div>
+									{% else %}
+										<div>{{problem.name()}}</div>
+									{% endif %}
+								{% endfor %}
+							</td>
+							<td class="splitter">
+								{% for solution in device.solutions() %}
+									{% if solution.applied() %}
+										<div style="color: green">{{solution.name()}}</div>
+									{% else %}
+										<div>{{solution.name()}}</div>
+									{% endif %}
+								{% endfor %}
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+{% endfor %}
 {% endblock %}
 
 {% block script %}
